exercises/ex6-Security/7-dryrun-authZ.yaml
#Be mindful ! check the pod name before using $istioctl ps ; Then set log level to debug $istioctl pc log app-tier-deployment-v1-6f489c8589-4s2kz.app-tier --level rbac:debug
#Ignore for now ! Optionalkubectl annotate --overwrite authorizationpolicies deny-path-headers -n foo istio.io/dry-run='true'
# On test-tier pod $ curl web-tier-svc.web-tier.svc.cluster.local
#Be mindful ! check the pod name before using $istioctl ps ; kubectl -n app-tier logs app-tier-deployment-v1-6f489c8589-4s2kz  -c istio-proxy | grep "shadow denied"
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "dry-run-authz"
  namespace: app-tier
  annotations:
    "istio.io/dry-run": "true"
spec:
  selector:
    matchLabels:
      app: app-tier
  action: DENY
  rules:
  - from:
    - source:
        namespaces: ["web-tier"]
          #principals: ["cluster.local/ns/web-tier/sa/defaut"]
    to:
    - operation:
        methods: ["GET"]
